--- a/scripts/install
+++ b/scripts/install
@@ -13,27 +13,27 @@ source /usr/share/yunohost/helpers
 # MANAGE SCRIPT FAILURE
 #=================================================
 
-ynh_clean_setup () {
+#REMOVEME? ynh_clean_setup () {
 	true
 }
 # Exit if an error occurs during the execution of the script
-ynh_abort_if_errors
+#REMOVEME? ynh_abort_if_errors
 
 #=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
 
-domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
+#REMOVEME? domain=$YNH_APP_ARG_DOMAIN
+#REMOVEME? path=$YNH_APP_ARG_PATH
 
-app=$YNH_APP_INSTANCE_NAME
+#REMOVEME? app=$YNH_APP_INSTANCE_NAME
 
 salt=$(ynh_string_random --length=40)
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
-ynh_script_progression --message="Validating installation parameters..." --weight=1
+#REMOVEME? ynh_script_progression --message="Validating installation parameters..." --weight=1
 
 # Check machine architecture (in particular, we don't support ARM and 32bit machines)
 if [ $YNH_ARCH == "i386" ];
@@ -41,19 +41,19 @@ then
 	ynh_die --message="Sorry, because of nodejs framework, this app can't be installed on i386 (32 bits) machine."
 fi
 
-final_path=/var/www/$app
-test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
+#REMOVEME? install_dir=/var/www/$app
+#REMOVEME? test ! -e "$install_dir" || ynh_die --message="This path already contains a folder"
 
 # Register (book) web path
-ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
+#REMOVEME? ynh_webpath_register --app=$app --domain=$domain --path=$path
 
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
-ynh_script_progression --message="Storing installation settings..." --weight=1
+#REMOVEME? ynh_script_progression --message="Storing installation settings..." --weight=1
 
-ynh_app_setting_set --app=$app --key=domain --value=$domain
-ynh_app_setting_set --app=$app --key=path --value=$path_url
+#REMOVEME? ynh_app_setting_set --app=$app --key=domain --value=$domain
+#REMOVEME? ynh_app_setting_set --app=$app --key=path --value=$path
 ynh_app_setting_set --app=$app --key=salt --value=$salt
 
 #=================================================
@@ -61,55 +61,55 @@ ynh_app_setting_set --app=$app --key=salt --value=$salt
 #=================================================
 # FIND AND OPEN A PORT
 #=================================================
-ynh_script_progression --message="Finding an available port..." --weight=1
+#REMOVEME? ynh_script_progression --message="Finding an available port..." --weight=1
 
 # Find an available port
-port=$(ynh_find_port --port=9876)
-ynh_app_setting_set --app=$app --key=port --value=$port
+#REMOVEME? port=$(ynh_find_port --port=9876)
+#REMOVEME? ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
 # INSTALL DEPENDENCIES
 #=================================================
-ynh_script_progression --message="Installing dependencies..." --weight=1
+#REMOVEME? ynh_script_progression --message="Installing dependencies..." --weight=1
 
-ynh_exec_warn_less ynh_install_app_dependencies $pkg_dependencies
+#REMOVEME? ynh_exec_warn_less ynh_install_app_dependencies $pkg_dependencies
 ynh_exec_warn_less ynh_install_nodejs --nodejs_version=$nodejs_version
-ynh_exec_warn_less ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key="https://dl.yarnpkg.com/debian/pubkey.gpg"
+#REMOVEME? ynh_exec_warn_less ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key="https://dl.yarnpkg.com/debian/pubkey.gpg"
 
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
-ynh_script_progression --message="Configuring system user..." --weight=1
+#REMOVEME? ynh_script_progression --message="Configuring system user..." --weight=1
 
 # Create a system user
-ynh_system_user_create --username=$app --home_dir="$final_path"
+#REMOVEME? ynh_system_user_create --username=$app --home_dir="$install_dir"
 
 #=================================================
 # CREATE A POSTGRESQL DATABASE
 #=================================================
-ynh_script_progression --message="Creating a PostgreSQL database..." --weight=1
+#REMOVEME? ynh_script_progression --message="Creating a PostgreSQL database..." --weight=1
 
-db_name=$(ynh_sanitize_dbid --db_name=$app)
-db_user=$db_name
-ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-ynh_psql_test_if_first_run
-ynh_psql_setup_db --db_user=$db_user --db_name=$db_name
-db_pwd=$(ynh_app_setting_get --app=$app --key=psqlpwd)
+#REMOVEME? db_name=$(ynh_sanitize_dbid --db_name=$app)
+#REMOVEME? db_user=$db_name
+#REMOVEME? ynh_app_setting_set --app=$app --key=db_name --value=$db_name
+#REMOVEME? ynh_psql_test_if_first_run
+#REMOVEME? ynh_psql_setup_db --db_user=$db_user --db_name=$db_name
+#REMOVEME? db_pwd=$(ynh_app_setting_get --app=$app --key=psqlpwd)
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression --message="Setting up source files..." --weight=1
 
-ynh_app_setting_set --app=$app --key=final_path --value=$final_path
+#REMOVEME? ynh_app_setting_set --app=$app --key=install_dir --value=$install_dir
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$final_path"
+ynh_setup_source --dest_dir="$install_dir"
 
-mkdir -p "$final_path/data"
+mkdir -p "$install_dir/data"
 
-chmod 750 "$final_path"
-chmod -R o-rwx "$final_path"
-chown -R $app:www-data "$final_path"
+chmod 750 "$install_dir"
+chmod -R o-rwx "$install_dir"
+chown -R $app:www-data "$install_dir"
 
 #=================================================
 # NGINX CONFIGURATION
@@ -128,21 +128,21 @@ ynh_script_progression --message="Installing woob..." --weight=1
 
 locale-gen C.UTF-8
 update-locale C.UTF-8
-ynh_exec_as $app virtualenv --python=python3 --system-site-packages "${final_path}/venv"
+ynh_exec_as $app virtualenv --python=python3 --system-site-packages "${install_dir}/venv"
 (
 	set +o nounset
-	source "${final_path}/venv/bin/activate"
+	source "${install_dir}/venv/bin/activate"
 	set -o nounset
 
-	ynh_exec_warn_less ynh_exec_as $app RUSTUP_HOME="$final_path"/.rustup CARGO_HOME="$final_path"/.cargo bash -c 'curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -q -y'
-	export PATH="$final_path/.cargo/bin:$PATH"
+	ynh_exec_warn_less ynh_exec_as $app RUSTUP_HOME="$install_dir"/.rustup CARGO_HOME="$install_dir"/.cargo bash -c 'curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -q -y'
+	export PATH="$install_dir/.cargo/bin:$PATH"
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install --upgrade pip
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install --upgrade setuptools
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install woob simplejson BeautifulSoup4 PyExecJS typing-extensions pdfminer.six Pillow --ignore-installed
-	ynh_secure_remove --file="$final_path/.cargo"
-	ynh_secure_remove --file="$final_path/.rustup"
-	ynh_secure_remove --file="$final_path/.cache"
-	ynh_secure_remove --file="$final_path/.local"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cargo"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.rustup"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cache"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.local"
 )
 
 #=================================================
@@ -152,11 +152,11 @@ ynh_script_progression --message="Installing app..." --weight=1
 
 ynh_use_nodejs
 (
-	cd "$final_path"
+	cd "$install_dir"
 	ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH yarn install
 	ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH yarn cache clean --all
-	ynh_secure_remove --file="$final_path/.cache"
-	ynh_secure_remove --file="$final_path/.yarn"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cache"
+#REMOVEME? 	ynh_secure_remove --file="$install_dir/.yarn"
 )
 
 #=================================================
@@ -164,10 +164,10 @@ ynh_use_nodejs
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/config.ini" --destination="$final_path/config.ini"
+ynh_add_config --template="../conf/config.ini" --destination="$install_dir/config.ini"
 
-chmod 400 "$final_path/config.ini"
-chown $app:$app "$final_path/config.ini"
+chmod 400 "$install_dir/config.ini"
+chown $app:$app "$install_dir/config.ini"
 
 #=================================================
 # SETUP SYSTEMD
@@ -208,9 +208,9 @@ ynh_systemd_action --service_name=$app --action="start" --log_path=systemd --lin
 #=================================================
 # RELOAD NGINX
 #=================================================
-ynh_script_progression --message="Reloading NGINX web server..." --weight=1
+#REMOVEME? ynh_script_progression --message="Reloading NGINX web server..." --weight=1
 
-ynh_systemd_action --service_name=nginx --action=reload
+#REMOVEME? ynh_systemd_action --service_name=nginx --action=reload
 
 #=================================================
 # SEND README TO ADMIN
@@ -219,14 +219,14 @@ ynh_script_progression --message="Sending ReadMe to admin..." --weight=1
 
 message="
 Domain: $domain
-Path  : $path_url
-Config: $final_path/config.ini
+Path  : $path
+Config: $install_dir/config.ini
 
 Please remember the default behavior of YunoHost when installing a new app is: everyone has access to the app.
 This may be an issue for Kresus as it is a personal tool. Please remember to edit access rights in the YunoHost web administration panel or using command line interface.
 
 Note about config.ini: this package will regenerate the config file on upgrade.
-If you changed it manually and upgrade Kresus, you'll find a backup in $final_path.
+If you changed it manually and upgrade Kresus, you'll find a backup in $install_dir.
 
 Are you facing an issue, want to improve this app or say thank you?
 Please open a new issue in this project: https://github.com/YunoHost-Apps/kresus_ynh
