--- a/scripts/install
+++ b/scripts/install
@@ -10,104 +10,29 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# MANAGE SCRIPT FAILURE
-#=================================================
-
-#REMOVEME? ynh_clean_setup () {
-	true
-}
-# Exit if an error occurs during the execution of the script
-#REMOVEME? ynh_abort_if_errors
-
-#=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
 
-#REMOVEME? domain=$YNH_APP_ARG_DOMAIN
-#REMOVEME? path=$YNH_APP_ARG_PATH
-
-#REMOVEME? app=$YNH_APP_INSTANCE_NAME
-
 salt=$(ynh_string_random --length=40)
-
-#=================================================
-# CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
-#=================================================
-#REMOVEME? ynh_script_progression --message="Validating installation parameters..." --weight=1
-
-# Check machine architecture (in particular, we don't support ARM and 32bit machines)
-if [ $YNH_ARCH == "i386" ];
-then
-	ynh_die --message="Sorry, because of nodejs framework, this app can't be installed on i386 (32 bits) machine."
-fi
-
-#REMOVEME? install_dir=/var/www/$app
-#REMOVEME? test ! -e "$install_dir" || ynh_die --message="This path already contains a folder"
-
-# Register (book) web path
-#REMOVEME? ynh_webpath_register --app=$app --domain=$domain --path=$path
-
-#=================================================
-# STORE SETTINGS FROM MANIFEST
-#=================================================
-#REMOVEME? ynh_script_progression --message="Storing installation settings..." --weight=1
-
-#REMOVEME? ynh_app_setting_set --app=$app --key=domain --value=$domain
-#REMOVEME? ynh_app_setting_set --app=$app --key=path --value=$path
 ynh_app_setting_set --app=$app --key=salt --value=$salt
-
-#=================================================
-# STANDARD MODIFICATIONS
-#=================================================
-# FIND AND OPEN A PORT
-#=================================================
-#REMOVEME? ynh_script_progression --message="Finding an available port..." --weight=1
-
-# Find an available port
-#REMOVEME? port=$(ynh_find_port --port=9876)
-#REMOVEME? ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
 # INSTALL DEPENDENCIES
 #=================================================
-#REMOVEME? ynh_script_progression --message="Installing dependencies..." --weight=1
+ynh_script_progression --message="Installing dependencies..." --weight=1
 
-#REMOVEME? ynh_exec_warn_less ynh_install_app_dependencies $pkg_dependencies
 ynh_exec_warn_less ynh_install_nodejs --nodejs_version=$nodejs_version
-#REMOVEME? ynh_exec_warn_less ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key="https://dl.yarnpkg.com/debian/pubkey.gpg"
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-#REMOVEME? ynh_script_progression --message="Configuring system user..." --weight=1
-
-# Create a system user
-#REMOVEME? ynh_system_user_create --username=$app --home_dir="$install_dir"
-
-#=================================================
-# CREATE A POSTGRESQL DATABASE
-#=================================================
-#REMOVEME? ynh_script_progression --message="Creating a PostgreSQL database..." --weight=1
-
-#REMOVEME? db_name=$(ynh_sanitize_dbid --db_name=$app)
-#REMOVEME? db_user=$db_name
-#REMOVEME? ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-#REMOVEME? ynh_psql_test_if_first_run
-#REMOVEME? ynh_psql_setup_db --db_user=$db_user --db_name=$db_name
-#REMOVEME? db_pwd=$(ynh_app_setting_get --app=$app --key=psqlpwd)
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression --message="Setting up source files..." --weight=1
 
-#REMOVEME? ynh_app_setting_set --app=$app --key=install_dir --value=$install_dir
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source --dest_dir="$install_dir"
 
 mkdir -p "$install_dir/data"
 
-chmod 750 "$install_dir"
 chmod -R o-rwx "$install_dir"
 chown -R $app:www-data "$install_dir"
 
@@ -139,10 +64,10 @@ ynh_exec_as $app virtualenv --python=python3 --system-site-packages "${install_d
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install --upgrade pip
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install --upgrade setuptools
 	ynh_exec_warn_less ynh_exec_as $app env PATH=$PATH pip install woob simplejson BeautifulSoup4 PyExecJS typing-extensions pdfminer.six Pillow --ignore-installed
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cargo"
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.rustup"
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cache"
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.local"
+	ynh_secure_remove --file="$install_dir/.cargo"
+	ynh_secure_remove --file="$install_dir/.rustup"
+	ynh_secure_remove --file="$install_dir/.cache"
+	ynh_secure_remove --file="$install_dir/.local"
 )
 
 #=================================================
@@ -155,8 +80,8 @@ ynh_use_nodejs
 	cd "$install_dir"
 	ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH yarn install
 	ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH yarn cache clean --all
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.cache"
-#REMOVEME? 	ynh_secure_remove --file="$install_dir/.yarn"
+	ynh_secure_remove --file="$install_dir/.cache"
+	ynh_secure_remove --file="$install_dir/.yarn"
 )
 
 #=================================================
@@ -204,34 +129,6 @@ ynh_script_progression --message="Starting a systemd service..." --weight=1
 
 # Start a systemd service
 ynh_systemd_action --service_name=$app --action="start" --log_path=systemd --line_match="Server is ready"
-
-#=================================================
-# RELOAD NGINX
-#=================================================
-#REMOVEME? ynh_script_progression --message="Reloading NGINX web server..." --weight=1
-
-#REMOVEME? ynh_systemd_action --service_name=nginx --action=reload
-
-#=================================================
-# SEND README TO ADMIN
-#=================================================
-ynh_script_progression --message="Sending ReadMe to admin..." --weight=1
-
-message="
-Domain: $domain
-Path  : $path
-Config: $install_dir/config.ini
-
-Please remember the default behavior of YunoHost when installing a new app is: everyone has access to the app.
-This may be an issue for Kresus as it is a personal tool. Please remember to edit access rights in the YunoHost web administration panel or using command line interface.
-
-Note about config.ini: this package will regenerate the config file on upgrade.
-If you changed it manually and upgrade Kresus, you'll find a backup in $install_dir.
-
-Are you facing an issue, want to improve this app or say thank you?
-Please open a new issue in this project: https://github.com/YunoHost-Apps/kresus_ynh
-"
-ynh_send_readme_to_admin "$message"
 
 #=================================================
 # END OF SCRIPT
