--- a/scripts/install
+++ b/scripts/install
@@ -33,6 +33,7 @@ ynh_setup_source --dest_dir="$install_dir"
 
 mkdir -p "$install_dir/data"
 
+chmod 750 "$install_dir"
 chmod -R o-rwx "$install_dir"
 chown -R $app:www-data "$install_dir"
 
